force-app/main/default/objects/QES_Unity_Site_Setup_del__c/QES_Unity_Site_Setup_del__c.object-meta.xml
<CustomObject>
    <description>Object used to configure QES Unity  public knowledge base site setup</description>
    <label>QES Unity Site Setup</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>QES Unity Site Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QES Unity Site Setup</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>