force-app/main/default/objects/QES_Unity_Site_Setup_del__c/fields/Cache_Max_Age__c.field-meta.xml
<CustomField>
    <fullName>Cache_Max_Age__c</fullName>
    <description>Catch expiry time in milliseconds</description>
    <inlineHelpText>Catch expiry time in milliseconds</inlineHelpText>
    <label>Cache Max Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>