force-app/main/default/objects/QES_Unity_Site_Setup_del__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if this configuration is active or inactive</description>
    <inlineHelpText>Indicate if this configuration is active or inactive</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>