force-app/main/default/objects/QES_Unity_Site_Setup_del__c/fields/Page_size__c.field-meta.xml
<CustomField>
    <fullName>Page_size__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Page Size refers to number of articles to be displayed in a knoweldge base search.Currently not being used anywhere but can be used in future for changing the number of article search results dynamically by referring this field in code.</description>
    <inlineHelpText>Page Size refers to number of articles to be displayed in a knoweldge base search.</inlineHelpText>
    <label>Page size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>