force-app/main/default/objects/QES_Unity_Site_Setup_del__c/fields/QESUnity_PKB_Setup_Id__c.field-meta.xml
<CustomField>
    <fullName>QESUnity_PKB_Setup_Id__c</fullName>
    <label>QESUnity PKB Setup Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>