force-app/main/default/objects/QES_Unity_Site_Setup_del__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <description>Name of the site to which this configuration applies to. Make sure value in this field exactly matches that of Site name</description>
    <inlineHelpText>Name of the site to which this configuration applies to. Make sure value in this field exactly matches that of Site name</inlineHelpText>
    <label>Site Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>