force-app/main/default/objects/QES_Unity_Site_Setup_del__c/fields/Site_Title__c.field-meta.xml
<CustomField>
    <fullName>Site_Title__c</fullName>
    <description>Title for the site landing page</description>
    <inlineHelpText>Title for the site landing page</inlineHelpText>
    <label>Site Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>